--- a/templates/tab/ts/default/package.json
+++ b/templates/tab/ts/default/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@azure/core-tracing": "1.0.0-preview.13",
     "@fluentui/react-northstar": "^0.54.0",
     "@microsoft/teams-js": "^1.6.0",
     "@microsoft/teamsfx": "^0.2.0",
@@ -13,8 +12,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^4.0.3",
-    "tslib": "^2.0.0"
+    "react-scripts": "^4.0.3"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
