feat: add button in tree view (#1785)
* feat: add cicd guide button in tree view

Co-authored-by: Ivan He <ruhe@microsoft.com>

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -191,6 +191,10 @@
         {
           "command": "fx-extension.selectAndDebug",
           "when": "false"
+        },
+        {
+          "command": "fx-extension.cicdGuide",
+          "when": "false"
         }
       ]
     },
@@ -304,6 +308,11 @@
         "command": "fx-extension.selectAndDebug",
         "title": "Select and Start Debuging Teams App",
         "icon": "$(run)"
+      },
+      {
+        "command": "fx-extension.cicdGuide",
+        "title": "CI/CD guide",
+        "icon": "$(sync)"
       }
     ],
     "taskDefinitions": [
