--- a/docs/cicd/github-cd-template.yml
+++ b/docs/cicd/github-cd-template.yml
@@ -42,8 +42,8 @@ jobs:
       - name: Run Unit Test
         run: cd tabs && npm run test
 
-      # We suggest to do the provision steps by case manually or in a separated workflow, so just comment the following steps for references.
-      # After provision, you should commit .fx/env.default.json into the repository for later use.
+      # We suggest to do the `teamsfx provision` step manually or in a separate workflow. The following steps are for your reference.
+      # After provisioning, you should commit .fx/env.default.json into the repository.
       # You should pick required secrets from .fx/default.userdata, and save them in the repository secrets (https://docs.github.com/en/actions/reference/encrypted-secrets) which can be refered by the step with name 'Generate default.userdata'. 
       #- name: Provision hosting environment
       #  uses: OfficeDev/teamsfx-cli-action@v1
