chore: support simpleauth cd on github action

--- a/.gitignore
+++ b/.gitignore
@@ -368,6 +368,7 @@ test-results.*
 # simple auth
 SimpleAuth.zip
 SimpleAuthUnzipOutput
+Microsoft.TeamsFx.SimpleAuth_*.zip
 
 # so you can npm install inside a template and not worry about committing
 templates/*/*/package-lock.json
