--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -59,16 +59,6 @@ jobs:
         run: |
           echo "${{ secrets.NPMRC }}" > ~/.npmrc
 
-      - name: Download Simple Auth bits
-        uses: nick-invision/retry@v2
-        with:
-          timeout_minutes: 10
-          max_attempts: 10
-          retry_on: error
-          shell: pwsh
-          command: |
-            ./.github/scripts/downloadSimpleAuth.ps1
-
       - name: Setup project
         run: |
           npm run setup
@@ -105,6 +95,7 @@ jobs:
           echo "::set-output name=TEMPLATE_VERSION::$(git tag --points-at HEAD | grep templates)"
           echo "::set-output name=EXTENSION_VERSION_NUM::$(git tag --points-at HEAD | grep ms-teams-vscode-extension@ | cut -d '@' -f2)"
           echo "::set-output name=EXTENSION_VERSION::$(git tag --points-at HEAD | grep ms-teams-vscode-extension@)"
+          echo "::set-output name=SIMPLEAUTH_VERSION::$(git tag --points-at HEAD | grep simpleauth)"
           if git tag --points-at HEAD | grep templates | grep rc;
           then
               git push -d origin $(git tag --points-at HEAD | grep templates | grep rc)
@@ -178,6 +169,44 @@ jobs:
     
       - name: cleanup templates
         run: rm -rf ./*.zip && git clean -df
+
+      - name: trigger simpleauth azure build pipeline
+        if: ${{ contains(steps.version-change.outputs.CHANGED, 'simpleauth') && github.ref == 'refs/heads/main' }}
+        uses: Azure/pipelines@v1
+        with:
+          azure-devops-project-url: 'https://dev.azure.com/mseng/VSIoT'
+          azure-pipeline-name: 'Build Simple Auth Release Artifacts' 
+          azure-devops-token: '${{ secrets.ADO_PAT }}'
+      
+      - name: check build status and download assets
+        if: ${{ contains(steps.version-change.outputs.CHANGED, 'simpleauth') && github.ref == 'refs/heads/main' }}
+        run: |
+          output=$(./.github/scripts/simpleauth-azdo-pipelines.sh ${{ secrets.ADO_PAT }} 11303 >&1)
+          if [ -z $output ]; then exit 1; fi
+          simpleAuthVer=$(echo ${{ steps.version-change.outputs.CHANGED }} | grep simpleauth | cut -d '@' -f2)
+          curl "https://dev.azure.com/mseng/_apis/resources/Containers/$output/drop?itemPath=drop/Microsoft.TeamsFx.SimpleAuth_$simpleAuthVer.zip" -L -O
+          if [ ! -f Microsoft.TeamsFx.*.zip ]; then exit 1; fi
+
+      - name: download simpleauth to fx-core
+        uses: nick-invision/retry@v2
+        with: 
+          timeout_minutes: 10
+          max_attempts: 10
+          retry_on: error
+          command: |
+            if [ -f Microsoft.TeamsFx.SimpleAuth_*.zip ]; then
+              cp Microsoft.TeamsFx.SimpleAuth_*.zip packages/fx-core/templates/plugins/resource/simpleauth/SimpleAuth.zip
+            else
+              ./.github/scripts/downloadSimpleAuth.ps1
+            fi
+
+      - name: publish simpleauth to github release page
+        if: ${{ contains(steps.version-change.outputs.CHANGED, 'simpleauth') && github.ref == 'refs/heads/main' }}
+        uses: ncipollo/release-action@v1.7.3
+        with:
+          token: ${{ secrets.CD_PAT }}
+          tag: ${{ steps.version-change.outputs.SIMPLEAUTH_VERSION }}
+          artifacts: Microsoft.TeamsFx.SimpleAuth_*.zip
 
       - name: publish alpha release to npm org
         if: ${{ github.event_name == 'schedule' || (github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/dev' && github.event.inputs.preid == 'alpha')}}
