fix(localdebug): hidden command if it is not a v1 project

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -171,6 +171,10 @@
         {
           "command": "fx-extension.cicdGuide",
           "when": "false"
+        },
+        {
+          "command": "fx-extension.migrateV1Project",
+          "when": "fx-extension.v1Project"
         }
       ]
     },
