--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -33,6 +33,16 @@ jobs:
         with:
           dotnet-version: 3.1.x
 
+      - name: Download Simple Auth bits
+              uses: nick-invision/retry@v2
+              with:
+                timeout_minutes: 10
+                max_attempts: 10
+                retry_on: error
+                shell: pwsh
+                command: |
+                  ./.github/scripts/downloadSimpleAuth.ps1
+
       - name: Setup project
         run: |
           npm run setup
@@ -70,6 +80,16 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 3.1.x
+
+      - name: Download Simple Auth bits
+        uses: nick-invision/retry@v2
+        with:
+          timeout_minutes: 10
+          max_attempts: 10
+          retry_on: error
+          shell: pwsh
+          command: |
+            ./.github/scripts/downloadSimpleAuth.ps1
 
       - name: Setup project
         run: |
@@ -133,6 +153,16 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 3.1.x
+
+      - name: Download Simple Auth bits
+        uses: nick-invision/retry@v2
+        with:
+          timeout_minutes: 10
+          max_attempts: 10
+          retry_on: error
+          shell: pwsh
+          command: |
+            ./.github/scripts/downloadSimpleAuth.ps1
 
       - name: Setup project
         run: |
