--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -243,8 +243,17 @@ jobs:
           artifacts: ./packages/**/*.vsix
           prerelease: true
 
-      - name: release VSCode extension on main to github
-        if: ${{ contains(steps.version-change.outputs.CHANGED, 'ms-teams-vscode-extension@') && github.ref == 'refs/heads/main' }}
+      - name: release RC VSCode extension to github
+        if: ${{ contains(steps.version-change.outputs.CHANGED, 'ms-teams-vscode-extension@') && contains(steps.version-change.outputs.CHANGED, 'rc') }}
+        uses: ncipollo/release-action@v1.7.3
+        with:
+          token: ${{ secrets.CD_PAT }}
+          tag: 'vscode-extension@${{ steps.version-change.outputs.EXTENSION_VERSION }}'
+          artifacts: ./packages/**/*.vsix
+          prerelease: true
+      
+      - name: release stable VSCode extension to github
+        if: ${{ contains(steps.version-change.outputs.CHANGED, 'ms-teams-vscode-extension@') && !contains(steps.version-change.outputs.CHANGED, 'rc') && github.ref == 'refs/heads/main' }}
         uses: ncipollo/release-action@v1.7.3
         with:
           token: ${{ secrets.CD_PAT }}
