feat(localdebug): add migrate v1 project command into vsc (#1978)
* feat(localdebug): add migrate v1 project command into vsc

* fix(localdebug): hidden command if it is not a v1 project

* fix(localdebug): hidden command if it is not a v1 project

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -60,6 +60,7 @@
     "onCommand:fx-extension.openReportIssues",
     "onCommand:fx-extension.validate-dependencies",
     "onCommand:fx-extension.pre-debug-check",
+    "onCommand:fx-extension.migrateV1Project",
     "workspaceContains:**/.fx/*",
     "onView:teamsfx",
     "onView:teamsfx-accounts",
@@ -170,6 +171,10 @@
         {
           "command": "fx-extension.cicdGuide",
           "when": "false"
+        },
+        {
+          "command": "fx-extension.migrateV1Project",
+          "when": "fx-extension.v1Project"
         }
       ]
     },
@@ -288,6 +293,10 @@
         "command": "fx-extension.cicdGuide",
         "title": "CI/CD guide",
         "icon": "$(sync)"
+      },
+      {
+        "command": "fx-extension.migrateV1Project",
+        "title": "Teams: Initialize Your Project to Use Teams Toolkit V2"
       }
     ],
     "taskDefinitions": [
