--- a/templates/bot/js/default/package.json
+++ b/templates/bot/js/default/package.json
@@ -4,7 +4,7 @@
   "msteams": {
     "teamsAppId": null
   },
-  "description": "Microsoft Teams conversation bot quickstart",
+  "description": "Microsoft Teams Toolkit hello world Bot sample",
   "author": "Microsoft",
   "license": "MIT",
   "main": "index.js",
