feat: add env ui 1

--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -63,6 +63,7 @@
     "workspaceContains:**/.fx/*",
     "onView:teamsfx",
     "onView:teamsfx-accounts",
+    "onView:teamsfx-environment",
     "onView:teamsfx-development",
     "onView:teamsfx-deployment",
     "onView:teamsfx-help-and-feedback"
@@ -84,6 +85,11 @@
           "name": "Accounts"
         },
         {
+          "id": "teamsfx-environment",
+          "name": "Environment",
+          "when": "fx-extension.isMultiEnvEnabled"
+        },
+        {
           "id": "teamsfx-development",
           "name": "Development"
         },
@@ -98,6 +104,13 @@
       ]
     },
     "menus": {
+      "view/title": [
+        {
+          "command": "fx-extension.addEnvironment",
+          "when": "view == teamsfx-environment",
+          "group": "navigation@1"
+        }
+      ],
       "view/item/context": [
         {
           "command": "fx-extension.signOut",
@@ -133,6 +146,14 @@
           "command": "fx-extension.signInGuideline",
           "when": "view == teamsfx-accounts && viewItem == signinAzure",
           "group": "inline"
+        },
+        {
+          "command": "fx-extension.viewEnvironment",
+          "when": "view == teamsfx-environment && viewItem == environment"
+        },
+        {
+          "command": "fx-extension.activateEnvironment",
+          "when": "view == teamsfx-environment && viewItem == environment"
         }
       ],
       "editor/title/run": [
@@ -288,6 +309,19 @@
         "command": "fx-extension.cicdGuide",
         "title": "CI/CD guide",
         "icon": "$(sync)"
+      },
+      {
+        "command": "fx-extension.addEnvironment",
+        "title": "Teams: Add new environment",
+        "icon": "$(add)"
+      },
+      {
+        "command": "fx-extension.viewEnvironment",
+        "title": "Teams: View environment profile"
+      },
+      {
+        "command": "fx-extension.activateEnvironment",
+        "title": "Teams: Activate environment"
       }
     ],
     "taskDefinitions": [
