--- a/templates/bot/ts/default/package.json
+++ b/templates/bot/ts/default/package.json
@@ -1,7 +1,7 @@
 {
   "name": "echobot",
   "version": "1.0.0",
-  "description": "Bot Builder v4 echo bot sample",
+  "description": "Microsoft Teams Toolkit hello world Bot sample",
   "author": "Microsoft",
   "license": "MIT",
   "main": "./lib/index.js",
@@ -16,14 +16,12 @@
     "url": "https://github.com"
   },
   "dependencies": {
-    "@azure/msal-node": "^1.0.0-beta.3",
-    "@microsoft/microsoft-graph-client": "^2.2.1",
+    "adaptive-expressions": "^4.14.1",
+    "adaptivecards-templating": "^2.1.0",
     "botbuilder": "~4.14.0",
     "botbuilder-dialogs": "~4.14.0",
     "isomorphic-fetch": "^3.0.0",
-    "restify": "^8.5.1",
-    "@microsoft/teamsfx": "^0.2.0",
-    "uuid": "^8.3.2"
+    "restify": "^8.5.1"
   },
   "devDependencies": {
     "@types/restify": "8.4.2",
