--- a/templates/bot/js/default/package.json
+++ b/templates/bot/js/default/package.json
@@ -4,7 +4,7 @@
   "msteams": {
     "teamsAppId": null
   },
-  "description": "Microsoft Teams conversation bot quickstart",
+  "description": "Microsoft Teams Toolkit hello world Bot sample",
   "author": "Microsoft",
   "license": "MIT",
   "main": "index.js",
@@ -13,8 +13,8 @@
     "watch": "nodemon ./index.js"
   },
   "dependencies": {
-    "@microsoft/teamsfx": "^0.2.0",
-    "@microsoft/microsoft-graph-client": "^2.2.1",
+    "adaptive-expressions": "^4.14.1",
+    "adaptivecards-templating": "^2.1.0",
     "botbuilder": "~4.14.0",
     "botbuilder-dialogs": "~4.14.0",
     "isomorphic-fetch": "^3.0.0",
